--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <option value=""></option>
         </select>
         <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/index.js"></script>
         <script src="assets/js/popper.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
