--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <select>
-            <option value=""></option>
-            <option value=""></option>
-            <option value=""></option>
-            <option value=""></option>
-            <option value=""></option>
+        <select name="language" id='listOfLetters'>
         </select>
+        <ul id='listOfNames'>
+        </ul>
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/index.js"></script>
         <script src="assets/js/popper.js"></script>
