--- a/_pgbackup/index_1617443452.html
+++ b/_pgbackup/index_1617443452.html
@@ -16,20 +16,16 @@
     <body>
         <div class="main">
             <div class="mainContainer">
-                <div class="titleLine"></div>
                 <nav class="bg-white navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
-                        <div class="logo">
-                            <p>CLEARCUT</p>
-                            <p>Free PSD Website Template</p>
-                        </div>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-1" aria-controls="navbarNavDropdown-1" aria-expanded="false" aria-label="Toggle navigation"> 
-                            <span class="navbar-toggler-icon"></span> 
-                        </button>
+                        <div>
+                            <a class="navbar-brand" href="#">CLEARCUT</a>
+                            <p class="#">Free PSD Website Template</p>
+                        </div>                         
                         <div class="collapse navbar-collapse " id="navbarNavDropdown-1"> 
                             <ul class="ml-auto navbar-nav"> 
-                                <li class="nav-item"> 
-                                    <a class="nav-link" href="#">HOME<span class="sr-only">(current)</span></a> 
+                                <li class="nav-item active"> 
+                                    <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a> 
                                 </li>                                 
                                 <li class="nav-item"> 
                                     <a class="nav-link" href="#">STYLE DEMO</a> 
@@ -42,57 +38,76 @@
                                 </li>                                 
                                 <li class="nav-item"> 
                                     <a class="nav-link" href="#">PORTFOLIO</a> 
-                                </li>                                 
+                                </li>
                                 <li class="nav-item"> 
-                                    <a class="nav-link" href="#" >GALLERY</a> 
-                                                                      
+                                    <a class="nav-link" href="#">GALLERY</a> 
                                 </li>                                 
                             </ul>                             
                         </div>
                     </div>                     
                 </nav>
                 <div class="slaiderConteiner">
-                    <div>
+                    <!-- <div>
                         <p class="titleTextOfSlider">
                             “ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam 
                             erat. In fringilla massa ut nisi ullamcorper pellentesque „ </p>
                     </div>
+                    <ul class="sliderList">
+                        <img src="images/images-slaider/natural.jpg" class="slaider">
+                    </ul>
+                    <div class="textOfImg">
+                        <p class="titleTextOfImg">Some title</p>
+                        <p class="bodyTextOfImg">Some text</p>
+                    </div>
+                    <div class="sliderArrowLeft"></div>
+                    <div class="sliderArrowRight"></div>
+                    <div class="sliderDots"></div> -->
+
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active ">
-                                <img class="d-block w-100" src="images/images-slaider/natural.jpg" alt="First slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <p>This Is A Very Long Slider Title</p>
-                                    <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean 
+                      <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                      </ol>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active ">
+                          <img class="d-block w-100" src="images/images-slaider/natural.jpg" alt="First slide">
+                          <div class="carousel-caption d-none d-md-block">
+                            <p>This Is A Very Long Slider Title</p>
+                            <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean 
                                 elit intesque sed. Facilispede estibulum nulla orna nisl velit.</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="images/images-slaider/natural.jpg" alt="Second slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <p>This Is A Other Long Slider Title</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper pellentesque </p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="images/images-slaider/natural.jpg" alt="Third slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <p>This Is A Third Very Long Slider Title</p>
-                                    <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean 
-                                elit intesque sed. Facilispede estibulum nulla orna nisl velit.</p>
-                                </div>
-                            </div>
+                          </div>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="images/images-slaider/natural.jpg" alt="Second slide">
+                          <div class="carousel-caption d-none d-md-block">
+                            <p>This Is A Very Long Slider Title2</p>
+                            <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean 
+                                elit intesque sed. Facilispede estibulum nulla orna nisl velit.</p>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="images/images-slaider/natural.jpg" alt="Third slide">
+                          <div class="carousel-caption d-none d-md-block">
+                            <p>This Is A Very Long Slider Title3</p>
+                            <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean 
+                                elit intesque sed. Facilispede estibulum nulla orna nisl velit.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
                     </div>
                 </div>
+
                 <div class="line"></div>
+
                 <div class="containerAboutOurActivity">
                     <div class="about aboutCompany ">
                         <p class="titleActivity">A Little About Us</p>
@@ -105,7 +120,7 @@
                         <p class="link"><a>Read More About Us »</a></p>
                     </div>
                     <div class="about aboutServicesContainer">
-                        <p class="titleActivity">Some Of Our Services</p> 
+                        <p class="titleActivity">Some Of Our Services</p>    
                         <div class="aboutServices">
                             <img src="images/images-icon/1.png" class="imagesIcon">
                             <div>
@@ -118,7 +133,7 @@
                             <div>
                                 <h5>Service Title</h5>
                                 <p>Inteligula congue id elis donec sce sag ittis intes id laoreet aenean.</p>
-                            </div>                             
+                            </div>    
                         </div>
                         <div class="aboutServices">
                             <img src="images/images-icon/3.png" class="imagesIcon">
@@ -133,7 +148,7 @@
                                 <h5>Service Title</h5>
                                 <p>Inteligula congue id elis donec sce sag ittis intes id laoreet aenean.</p>
                             </div>
-                        </div>                         
+                        </div>         
                         <p class="link"><a>View All Of Our Services »</a></p>
                     </div>
                     <div class="about customerReviews">
@@ -146,8 +161,8 @@
                             <p>Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt. 
                             Nequatdui laorem justo a non tellus laoreet tincidunt ut vel velit. 
                             Idenim semper pellente velis felit ac nullam pretium morbi lacus.</p>
-                            <p class="link"><a>View This Project »</a> 
-                            <p>  
+                            <p class="link"><a>View This Project »</a>
+                            <p> 
                         </div>
                         <div class="reviseSecondCustomer">
                             <div class="quotesWrapper">
@@ -161,6 +176,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
             <footer>
                 <div class="companyDetailsConteiner">
