--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
                             erat. In fringilla massa ut nisi ullamcorper pellentesque „ </p>
                     </div>
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
+                       
                         <div class="carousel-inner">
                             <div class="carousel-item active ">
                                 <img class="d-block w-100" src="images/images-slaider/natural.jpg" alt="First slide">
@@ -73,23 +69,43 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="images/images-slaider/natural.jpg" alt="Second slide">
+                                <img class="d-block w-100" src="images/images-slaider/mountain.jpg" alt="Second slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <p>Slider Title</p>
+                                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="images/images-slaider/village.jpg" alt="Second slide">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>This Is A Other Long Slider Title</p>
+                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="images/images-slaider/trees.jpg" alt="Second slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <p>This Is A Slider Title</p>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper pellentesque </p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="images/images-slaider/natural.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="images/images-slaider/river.jpg" alt="Third slide">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <p>This Is A Third Very Long Slider Title</p>
-                                    <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean 
-                                elit intesque sed. Facilispede estibulum nulla orna nisl velit.</p>
+                                    <p>This Is A Not Long Slider Title</p>
+                                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                 </div>
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
                         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        </ol>
                     </div>
                 </div>
                 <div class="line"></div>
@@ -195,22 +211,22 @@
                         </div>
                     </div>                     
                 </div>
-                <div class="cosialGroopsConteiner">
+                <div class="socialGroupsContainer">
                     <p class="titleDetails">Stay Social</p>
-                    <div>
-                        <img src="images/other-images/linkedin.png">Get linked up in LinkedIn
+                    <div class="linkedIn socialIcon">
+                        <span></span><p>Get linked up in LinkedIn</p>
                     </div>
-                    <div>
-                        <img src="images/other-images/twitter.png">Keep up with our Tweets
+                    <div class="twitter socialIcon">
+                        <span></span><p>Keep up with our Tweets</p>
                     </div>
-                    <div>
-                        <img src="images/other-images/pinterest.png">Photos on Pinterest
+                    <div class="pinterest socialIcon">
+                        <span></span><p>Photos on Pinterest</p>
                     </div>
-                    <div>
-                        <img src="images/other-images/rss.png">RSS Feed
+                    <div class="rss socialIcon">
+                        <span></span><p>RSS Feed</p>
                     </div>
                 </div>
-                <div class="blogConteiner">
+                <div class="blogContainer">
                     <p class="titleDetails">
                             From The Blog </p>
                     <div class="firstBlog">
