--- a/_pgbackup/index_1617537514.html
+++ b/_pgbackup/index_1617537514.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="blocks.css">
     </head>
     <body>
-        <div class="wrapper">
+        <div class="main">
             <div class="mainContainer">
                 <div class="titleLine"></div>
                 <nav class="bg-white navbar navbar-expand-lg navbar-light">
@@ -44,7 +44,8 @@
                                     <a class="nav-link" href="#">PORTFOLIO</a> 
                                 </li>                                 
                                 <li class="nav-item"> 
-                                    <a class="nav-link" href="#">GALLERY</a> 
+                                    <a class="nav-link" href="#" >GALLERY</a> 
+                                                                      
                                 </li>                                 
                             </ul>                             
                         </div>
@@ -57,6 +58,7 @@
                             erat. In fringilla massa ut nisi ullamcorper pellentesque „ </p>
                     </div>
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                       
                         <div class="carousel-inner">
                             <div class="carousel-item active ">
                                 <img class="d-block w-100" src="images/images-slaider/natural.jpg" alt="First slide">
@@ -160,7 +162,7 @@
                             <p>Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt. 
                             Nequatdui laorem justo a non tellus laoreet tincidunt ut vel velit. 
                             Idenim semper pellente velis felit ac nullam pretium morbi lacus.</p>
-                            <p class="link"><a>View This Project »</a>  
+                            <p class="link"><a>View This Project »</a> 
                             <p>  
                         </div>
                         <div class="reviseSecondCustomer">
@@ -212,20 +214,16 @@
                 <div class="socialGroupsContainer">
                     <p class="titleDetails">Stay Social</p>
                     <div class="linkedIn socialIcon">
-                        <span></span>
-                        <p>Get linked up in LinkedIn</p>
+                        <span></span><p>Get linked up in LinkedIn</p>
                     </div>
                     <div class="twitter socialIcon">
-                        <span></span>
-                        <p>Keep up with our Tweets</p>
+                        <span></span><p>Keep up with our Tweets</p>
                     </div>
                     <div class="pinterest socialIcon">
-                        <span></span>
-                        <p>Photos on Pinterest</p>
+                        <span></span><p>Photos on Pinterest</p>
                     </div>
                     <div class="rss socialIcon">
-                        <span></span>
-                        <p>RSS Feed</p>
+                        <span></span><p>RSS Feed</p>
                     </div>
                 </div>
                 <div class="blogContainer">
@@ -253,11 +251,7 @@
                         <button>SUBMIT</button>
                     </form>
                 </div>
-            </footer>
-            <div class="copyrightConteiner">
-                <span>Copyright © 2013 Domain Name - All Rights Reserved</span>
-                <span>Template by OS Templates</span>
-            </div>             
+            </footer>             
         </div>
         <!-- Bootstrap core JavaScript
     ================================================== -->
