--- a/_pgbackup/index_1617537540.html
+++ b/_pgbackup/index_1617537540.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="blocks.css">
     </head>
     <body>
-        <div class="wrapper">
+        <div class="main">
             <div class="mainContainer">
                 <div class="titleLine"></div>
                 <nav class="bg-white navbar navbar-expand-lg navbar-light">
@@ -52,6 +52,41 @@
                 </nav>
                 <div class="slaiderConteiner">
                     <div>
+                        <nav class="bg-white navbar navbar-expand-lg navbar-light">
+                            <div class="container-fluid">
+                                <a class="navbar-brand" href="#">Company</a>
+                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-1" aria-controls="navbarNavDropdown-1" aria-expanded="false" aria-label="Toggle navigation"> 
+                                    <span class="navbar-toggler-icon"></span> 
+                                </button>
+                                <div class="collapse navbar-collapse " id="navbarNavDropdown-1"> 
+                                    <ul class="ml-auto navbar-nav"> 
+                                        <li class="nav-item active"> 
+                                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> 
+                                        </li>                                         
+                                        <li class="nav-item"> 
+                                            <a class="nav-link" href="#">About</a> 
+                                        </li>                                         
+                                        <li class="nav-item"> 
+                                            <a class="nav-link" href="#">Features</a> 
+                                        </li>                                         
+                                        <li class="nav-item"> 
+                                            <a class="nav-link" href="#">Services</a> 
+                                        </li>                                         
+                                        <li class="nav-item"> 
+                                            <a class="nav-link" href="#">Contact</a> 
+                                        </li>                                         
+                                        <li class="nav-item dropdown"> 
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                                     Dropdown link </a> 
+                                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
+                                                <a class="dropdown-item" href="#">Action</a> 
+                                                <a class="dropdown-item" href="#">Another action</a> 
+                                                <a class="dropdown-item" href="#">Something else here</a> 
+                                            </div>                                             
+                                        </li>                                         
+                                    </ul>                                     
+                                </div>
+                            </div>                             
+                        </nav>
                         <p class="titleTextOfSlider">
                             “ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam 
                             erat. In fringilla massa ut nisi ullamcorper pellentesque „ </p>
@@ -253,11 +288,7 @@
                         <button>SUBMIT</button>
                     </form>
                 </div>
-            </footer>
-            <div class="copyrightConteiner">
-                <span>Copyright © 2013 Domain Name - All Rights Reserved</span>
-                <span>Template by OS Templates</span>
-            </div>             
+            </footer>             
         </div>
         <!-- Bootstrap core JavaScript
     ================================================== -->
