--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <p>CLEARCUT</p>
                             <p>Free PSD Website Template</p>
                         </div>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-1" aria-controls="navbarNavDropdown-1" aria-expanded="false" aria-label="Toggle navigation"> 
+                        <button class="navbar-toggler headerButton" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-1" aria-controls="navbarNavDropdown-1" aria-expanded="false" aria-label="Toggle navigation"> 
                             <span class="navbar-toggler-icon"></span> 
                         </button>
                         <div class="collapse navbar-collapse " id="navbarNavDropdown-1"> 
